--- a/YoutubeBatchDownloader.Web/Views/Home/Index.cshtml
+++ b/YoutubeBatchDownloader.Web/Views/Home/Index.cshtml
@@ -8,6 +8,9 @@
     <div>
         <form id="youTubeForm" action="@Url.Content("~/YouTube/Convert")" method="post">
             <h2>@LocalResource.YouTubeHtml</h2>
+            <div>
+                <span>@LocalResource.StartIndex</span><input name="startPosition" type="text" />
+            </div>
             <p><textarea class="YouTubeHtml" name="youTubeHtml" placeholder="@LocalResource.PasteYourYouTubeHtmlHere"></textarea></p>
             <p class="buttonGo"><a class="btn btn-primary btn-lg" id="buttonGo">@LocalResource.Go</a></p>
         </form>
