--- a/YoutubeBatchDownloader.Web/Views/Home/Index.cshtml
+++ b/YoutubeBatchDownloader.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
         <form id="youTubeForm" action="@Url.Content("~/YouTube/Convert")" method="post">
             <h2>@LocalResource.YouTubeHtml</h2>
             <div>
-                <span>@LocalResource.StartIndex</span><input name="startPosition" type="text" />
+                <h4 class="pull-left">@LocalResource.StartIndex</h4><input name="startPosition" type="text" class="form-control startPosition" />
             </div>
             <p><textarea class="YouTubeHtml" name="youTubeHtml" placeholder="@LocalResource.PasteYourYouTubeHtmlHere"></textarea></p>
             <p class="buttonGo"><a class="btn btn-primary btn-lg" id="buttonGo">@LocalResource.Go</a></p>
